<resources>
    <string name="app_name">Stilla</string>
    <string name="punchline">Stillir þig að stilltu veðri</string>
    <string name="title_activity_maps">Map</string>

    <!-- BUTTONS -->

    <string name="add_new_trip">Ný Ferð</string>
    <string name="vew_all_trips">Allar Ferðir</string>

    <!-- NEW TRIP THINGS -->

    <string name="trip_name">Nafn ferðar</string>
    <string name="trip_start">Upphafstími ferðar (dd-mm-yyyy)</string>
    <string name="trip_end">Lokatími ferðar (dd-mm-yyyy)</string>
    <string name="trip_transportation">Ferðamáti</string>
    <string name="trip_destinations">Áfangastaðir (aðskilja með kommu)</string>
    <string name="spinner_hint_transport">Ferðamáti</string>
    <string name="save_new_trip">Vista ferð</string>

    <!-- WEATHER THINGS -->
    <string name="f">Vindhraði</string>
    <string name="t">Hiti (°C)</string>
    <string name="d">Vindstefna</string>
    <string name="w">Veðurlýsing</string>
    <string name="n">Skýjahula (%)</string>
    <string name="r">Úrkoma (mm/klst)</string>
    <string name="td">Daggarmark (°C)</string>
    <string name="time">Dagsetning/tími</string>
    <string name="dest">Áfangastaður</string>
    <string name="stationName">Nafn stöðvar</string>
    <string name="stationArea">Svæði stöðvar</string>
    <string name="stationEndpointName">Áfangastaður</string>
</resources>
