<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Activities.TripActivity"
    android:background="@drawable/woman_standing_on_mountain_2569815"
    android:id="@+id/relative_layout_trip">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp">

        <Switch
            android:id="@+id/switch_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorAccent"
            android:text="Fá tilkynningar"
            android:padding="10dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/spinner_dropdown_transport"
            android:textColorHint="@color/colorPrimaryDark"
            android:layout_marginTop="10dp"
            app:errorEnabled="true"
            android:textColor="@color/colorAccent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:id="@+id/textInput_trip_name_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/trip_name"
                android:id="@+id/textInput_trip_name"
                android:inputType="text|textNoSuggestions"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:id="@+id/textInput_trip_start_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/trip_start"
                android:id="@+id/textInput_trip_start"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:id="@+id/textInput_trip_end_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/trip_end"
                android:id="@+id/textInput_trip_end"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:id="@+id/textInput_destinations_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/trip_destinations"
                android:id="@+id/textInput_destinations"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_save_new_trip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="#B3D29F0F"
                android:text="@string/save_new_trip"
                android:textColor="#FFFFFF" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>